# cmake-d

./: .hgignore  .hgtags  .travis.yml  CMakeDCompiler.cmake.in  CMakeDInformation.cmake  CMakeDetermineDCompiler.cmake  CMakeLists.txt  CMakeTestDCompiler.cmake  FindGDCPath.cmake  LICENSE  Linux-dmd.cmake  README.md  Windows-gdc.cmake
.github/workflows/: main.yml
cmake-d/: CMakeDCompiler.cmake.in  CMakeDCompilerABI.d  CMakeDCompilerId.d.in  CMakeDInformation.cmake  CMakeDetermineDCompiler.cmake  CMakeLists.txt  CMakePlatformId.di.in  CMakeTestDCompiler.cmake  Copyright.txt  FindGDCPath.cmake  UseDDeps.cmake  UseDDepsMakeWIP.cmake  UseDDoc.cmake  UseDUnittest.cmake  UseDub.cmake  dependencies.cmake
cmake-d/Platform/: Darwin-DigitalMars.cmake  Darwin-dmd.cmake  Darwin-ldc2.cmake  Linux-DigitalMars.cmake  Linux-GNU.cmake  Linux-LDC.cmake  Linux-dmd.cmake  Linux-gdc.cmake  Linux-ldc2.cmake  Windows-DigitalMars.cmake  Windows-GNU.cmake  Windows-dmd.cmake  Windows-gdc.cmake
cmake-d/UseDub/: DubToCMake.d  DubUrl.d  semver.d
cmaked/: CMakeDCompiler.cmake.in  CMakeDCompilerId.d.in  CMakeDInformation.cmake  CMakeDetermineDCompiler.cmake  CMakeLists.txt  CMakeTestDCompiler.cmake  Copyright.txt  FindGDCPath.cmake  Linux-dmd.cmake  UseDDeps.cmake  Windows-gdc.cmake  dependencies.cmake
cmaked/Platform/: Linux-dmd.cmake  Linux-gdc.cmake  Windows-dmd.cmake  Windows-gdc.cmake
samples/FullSkeleton/: CMakeLists.txt  COPYING  ConfigureChecks.cmake  README
samples/FullSkeleton/cmake/Modules/: CMakeDCompiler.cmake.in  CPackSourceConfig.cmake  UseDDoc.cmake  UsePkgConfigVariable.cmake
samples/FullSkeleton/libraryA/core/: Exception.d
samples/FullSkeleton/libraryA/io/: INotify.d
samples/FullSkeleton/libraryA/mixins/: BladeParse.d  HandyMixinHelpers.d  HandyMixins.d
samples/FullSkeleton/libraryB/: CMakeLists.txt  LibraryB.d
samples/FullSkeleton/libraryB/render/: RendererWindows.d  RendererX11.d
samples/FullSkeleton/programClient/: ProgramClient.d
samples/FullSkeleton/programServer/: CMakeLists.txt  ProgramServerMain.d
samples/Hello/Demo/: demo.d
samples/Hello/Hello/: CMakeLists.txt  hello.d
samples/HelloPhobos/: CMakeLists.txt
samples/HelloPhobos/Demo/: CMakeLists.txt  demo.d
samples/HelloPhobos/Hello/: CMakeLists.txt
samples/HelloTango/: CMakeLists.txt
samples/HelloTango/Demo/: CMakeLists.txt
samples/minwin_gtk/: CMakeLists.txt  README.minwin  minwinchanges.diff
samples/minwin_gtk/minwin/: all.d  app.d  component.d  dialog.d  gtk.d  layout.d  listbox.d  menu.d  mswindows.d  paint.d  readme.txt  text.d  todo  win32.mak
samples/minwin_gtk/minwin/samples/: CMakeLists.txt  idle.d  sample.d  sample.exe.manifest  sample.rc  sdialog.d  win32.mak
samples/wc/: CMakeLists.txt  wc.d
tests/: CMakeLists.txt  run_tests.sh  run_tests_linux.sh
tests/FullSkeleton/: config.d.cmake
tests/FullSkeleton/candydoc/: candy.ddoc  modules.ddoc
tests/FullSkeleton/cmake/Modules/: CMakeDInformation.cmake  CMakeTestDCompiler.cmake  CPackConfig.cmake  DefineCompilerFlags.cmake  FindGTK2.cmake  FindNCurses.cmake
tests/FullSkeleton/cmake/Modules/Platform/: Windows-gdc.cmake
tests/FullSkeleton/libraryA/: CMakeLists.txt
tests/FullSkeleton/libraryA/io/: Output.d
tests/FullSkeleton/libraryB/: LibraryB.d
tests/FullSkeleton/libraryB/render/: Renderer.d
tests/FullSkeleton/programClient/: CMakeLists.txt  ProgramClientApp.d  ProgramClientMain.d
tests/HelloPhobos/Hello/: hello.d
tests/HelloPhobos/cmake/: Modules
tests/HelloTango/Hello/: hello.d
tests/app_1/: CMakeLists.txt  app_1.d
tests/app_2/: CMakeLists.txt  app_2.d
tests/app_3/: CMakeLists.txt  app_3.d
tests/app_4/: CMakeLists.txt  app_4.d
tests/app_5/: CMakeLists.txt  app_5.d  cfunc.c
tests/app_6/: CMakeLists.txt  app_6.d
tests/app_7/: CMakeLists.txt  app_7.d
tests/app_8/: CMakeLists.txt  app_8.d
tests/app_9/: CMakeLists.txt  moduleA.d
tests/dub/: CMakeLists.txt
tests/lib_1/: CMakeLists.txt  lib_1.d
tests/lib_2/: CMakeLists.txt  lib_2.c  lib_2_import.d
tests/minwin_gtk/: README.minwin
tests/minwin_gtk/minwin/: button.d  canvas.d  combo.d  event.d  font.d  geometry.d  group.d  gtk.brf  gtk_peers.d  icon.d  image.d  label.d  logging.d  multidg.d  peer.d  peerimpl.d  scroll.d  unittest.d  win32.brf  window.d
tests/minwin_gtk/minwin/samples/: layout.d  linux.mak  menus.d  painting.d  sample.def  sdialog2.d  topgroup.d  widgets.d
